feat: generalize personal API keys
